--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.12.1",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
